--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,387 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <title>CoinBase | Cryptocurrency & Giftcard exchange</title>
   </head>
   <body>
+    <header>
+      <section class="header">
+        <nav>
+          <figure class="containerLogo">
+            <img class="logo" src="" alt="Image logo" />
+          </figure>
+          <ul class="navList">
+            <li class="navItemList"><a href="#">Home</a></li>
+            <li class="navItemList"><a href="#">About Us</a></li>
+            <li class="navItemList"><a href="#">Blog</a></li>
+            <li class="navItemList"><a href="#">Contact Us</a></li>
+          </ul>
+          <section class="containerDropdown">
+            <select name="" id="">
+              <option value="">Sell Bitcoin/ Gift card</option>
+              <option value="">Sell Bitcoin</option>
+              <option value="">Sell Gift card</option>
+            </select>
+            <div class="btnLogin"><a href="#">LOGIN</a></div>
+          </section>
+        </nav>
+        <section class="hero">
+          <section class="containerContext">
+            <h1>
+              We provide easy solution to exchange your
+              <b> Bitcoin/ GiftCard for money</b>
+            </h1>
+            <p>
+              CoinBase is a platform for trading your bitcoin and gift-card at
+              the best rate, why not give us a trial.
+            </p>
+            <div class="btn"><a href="#">GET STARTED</a></div>
+          </section>
+          <figure>
+            <img src="@assetImgs/img/headerImgFirst" alt="Image the a device" />
+          </figure>
+        </section>
+      </section>
+    </header>
+    <main>
+      <section class="main">
+        <section class="welcomeCoinBase">
+          <figure>
+            <img
+              src="../src/assets/imgs/img/mainImgFirst1.png"
+              alt="image the two people"
+            />
+          </figure>
+          <section class="containerContext">
+            <h4>Welcome to CoinBase</h4>
+            <p>
+              We have the best rates . Simply start your exchange right now.
+              Sign up for our Affiliate program and earn commission from each
+              exchange. The earnings are credited in your account instantly and
+              can be withdrawn right away. Also note some exchange directions
+              are hidden for unregistered user. To ensure to have access to all
+              our exchange directions and benefits kindly sign up and verify
+              your identity.
+            </p>
+            <div class="btn">
+              <a href="#">Discover</a>
+            </div>
+          </section>
+        </section>
+
+        <section class="rates">
+          <section class="rateInfo">
+            <section class="containerContext">
+              <h5>OUR RATES</h5>
+              <h5>OUR RESERVES</h5>
+              <h5>LATEST EXCHANGES</h5>
+            </section>
+            <section class="ourRate">
+              <section class="coin">
+                <section class="coinBitcoin">
+                  <figure>
+                    <img src="" alt="Icon the a Bitcoin" />
+                  </figure>
+                  <span>BTC</span>
+                </section>
+                <section class="exchangeBitcoin">
+                  <span>We Buy @ <b> ₦350/$ </b> </span>
+                  <span>We Sell @ <b> ₦370/$ </b> </span>
+                </section>
+              </section>
+              <section class="coin">
+                <section class="coinEth">
+                  <figure>
+                    <img src="" alt="Icon the a Ethereum" />
+                  </figure>
+                  <span>ETH</span>
+                </section>
+                <section class="exchangeEth">
+                  <span>We Buy @ <b> ₦345/$ </b> </span>
+                  <span>We Sell @ <b> ₦370/$ </b> </span>
+                </section>
+              </section>
+            </section>
+
+            <section class="ourReserves">
+              <section class="reserveContainer reserveContainerBank">
+                <section class="currencyProvider">
+                  <figure>
+                    <img src="" alt="Image to the Bank provider" />
+                  </figure>
+                  <span>Bank Transfer</span>
+                </section>
+
+                <section class="payment">
+                  <span><b> #3452030300303.24/$ </b></span>
+                  <span>NGN</span>
+                </section>
+              </section>
+
+              <section class="reserveContainer reserveContainerBitcoin">
+                <section class="currencyProvider">
+                  <figure>
+                    <img src="" alt="Image to the Bitcoin provider" />
+                  </figure>
+                  <span>Bitcoin</span>
+                </section>
+
+                <section class="payment">
+                  <span><b> 399.98 BTC </b></span>
+                  <span>NGN</span>
+                </section>
+              </section>
+
+              <section class="reserveContainer reserveContainerEth">
+                <section class="currencyProvider">
+                  <figure>
+                    <img src="" alt="Image to the Ethereum provider" />
+                  </figure>
+                  <span>Ethereum</span>
+                </section>
+
+                <section class="payment">
+                  <span><b> 1000.00 ETH </b></span>
+                  <span>NGN</span>
+                </section>
+              </section>
+            </section>
+
+            <section class="latestExchanges">
+              <section class="conversionProvider conversion">
+                <span>Bitcoin BTC</span>
+                <span>--></span>
+                <span>Bank Transfer NGN</span>
+              </section>
+              <section class="currencyConversion conversion">
+                <span><b>1.16</b> BTC</span>
+                <span><----></span>
+                <span><b>696152299929.23</b> NGN</span>
+              </section>
+              <section class="couponConversion conversion">
+                <span>Amazon Card</span>
+                <span>--></span>
+                <span>Bank Transfer NGN</span>
+              </section>
+            </section>
+          </section>
+        </section>
+
+        <section class="greatExperience">
+          <figure>
+            <img src="" alt="Image the one person creating content" />
+          </figure>
+          <section class="containerContext">
+            <h3>Great experience with CoinBase</h3>
+            <p>
+              CoinBase is an online site and a p2admin platform that allows
+              users to buy, sell and/ or exchange digital and fiat assets
+              safely. Owned and managed by CoinBase Business Services
+              established and Incorporated in Nigeria.
+            </p>
+            <div class="btn">
+              <a href="#">Discover</a>
+            </div>
+          </section>
+        </section>
+
+        <section class="tradeAnywhere">
+          <section class="containerContext">
+            <h4>Trade from anywhere</h4>
+            <section class="cards">
+              ;
+              <div class="card cardBitcoin">
+                <figure>
+                  <img src="" alt="Image the a Bitcoin" />
+                </figure>
+                <span>Bitcoin</span>
+              </div>
+              <div class="card cardGif">
+                <figure>
+                  <img src="" alt="Image the a gift card" />
+                </figure>
+                <span>Gift Cards</span>
+              </div>
+            </section>
+          </section>
+        </section>
+
+        <section class="ourBlog">
+          <section class="containerContext">
+            <h4>Our blog</h4>
+            <p>Get to know the latest stuff via our blog post.</p>
+          </section>
+          <section class="blocks">
+            <div class="cardPost cardPostTech">
+              <section class="groupDateAndJob">
+                <span>01 FEB, 2019</span>
+                <span>|</span>
+                <span>TECHNOLOGY</span>
+              </section>
+              <section class="containerContextCard">
+                <h5>HOW TO SELL YOUR ITUNES GIFT-CARD WITH US .</h5>
+                <p>
+                  Lorem ipsum dolor sit, magna ius ad, qui minimum voluptuaries
+                  in. Ad mei modus, posted...
+                </p>
+                <div class="btn"><a href="#">READ MORE</a></div>
+              </section>
+            </div>
+            <div class="cardPost cardPostBusiness cardPostColor">
+              <section class="groupDateAndJob">
+                <span>19 JUNE, 2019</span>
+                <span>|</span>
+                <span>BUSINESS</span>
+              </section>
+
+              <section class="containerContextCard">
+                <h5>ETH TO NAIRA EXCHANGE RATE IS NOW #400 PER...</h5>
+                <p>
+                  Lorem ipsum dolor sit, magna ius ad, qui minimum voluptuaries
+                  in. Ad mei modus , posted...
+                </p>
+                <div class="btn"><a href="#">READ MORE</a></div>
+              </section>
+            </div>
+            <div class="cardPost cardPostLifeStyle">
+              <section class="groupDateAndJob">
+                <span>01 DEC, 2019</span>
+                <span>|</span>
+                <span>LIFESTYLE</span>
+              </section>
+              <section class="containerContextCard">
+                <h5>EXCHANGE 5 PRODUCTS & GET 1 FREE PRODUCT.</h5>
+                <p>
+                  Lorem ipsum dolor sit, magna ius ad, qui minimum voluptuaries
+                  in. Ad mei modus, posted...
+                </p>
+                <div class="btn"><a href="#">READ MORE</a></div>
+              </section>
+            </div>
+          </section>
+        </section>
+
+        <section class="testimonials">
+          <section class="containerContext">
+            <h4>10,000 Satisfied clients around the world</h4>
+            <p>
+              Yeah! we’re proud with numbers. We’ve helped thousands of clients
+              all around the world with our bespoke service. Hover on-top of
+              them pic to view their testimonials.
+            </p>
+          </section>
+          <section class="testimonial">
+            <span class="title">Fermi from Nigeria</span>
+            <span class="quality">⭐⭐⭐⭐⭐</span>
+            <span class="subTitle">Wonderful service</span>
+            <span class="description"
+              >Good deal and very wonderful service thank you.</span
+            >
+          </section>
+        </section>
+        <section class="downloadApp">
+          <section class="containerContext">
+            <h4>Download our app</h4>
+            <p>
+              Discover exclusive deals and discounts with our mobile experience.
+            </p>
+          </section>
+          <section class="storeImg">
+            <figure>
+              <img src="" alt="store images, App store" />
+            </figure>
+            <figure>
+              <img src="" alt="store images, Play store" />
+            </figure>
+          </section>
+          <section class="devicesPhone">
+            <figure>
+              <img src="" alt="Images Phones" />
+            </figure>
+            <figure>
+              <img src="" alt="Images Phones" />
+            </figure>
+          </section>
+        </section>
+        <section class="mainEnd">
+          <section class="containerContext">
+            <h4>Subscribe our newsletter</h4>
+            <p>
+              Subscribe to our newsletter for daily/weekly update of our
+              products and services.
+            </p>
+          </section>
+          <section class="contentForm">
+            <form>
+              <label for="email">
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="EMAIL"
+                />
+              </label>
+              <button>Discover</button>
+            </form>
+          </section>
+        </section>
+      </section>
+    </main>
+    <footer>
+      <section class="footer">
+        <section class="descriptionContent">
+          <section class="description">
+            <figure>
+              <img src="" alt="Logo in the website" />
+            </figure>
+            <p>
+              Fusce ut elit aliquet, fermentum leo vel, tempus nunc. Fusce eu
+              rhoncus augue. Fusce vel metus pharetra, fermentum
+            </p>
+            <section class="contentIcons">
+              <span>Icon</span>
+              <span>Icon</span>
+              <span>Icon</span>
+              <span>Icon</span>
+            </section>
+          </section>
+          <span class="child_description">© 2019 Designed by Cr8tiv_yemmy</span>
+        </section>
+
+        <section class="companyLinks">
+          <h5>CoinBase Links</h5>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Sell</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </section>
+        <section class="contactUs">
+          <section class="containerContext">
+            <h5>Contact Us</h5>
+            <p>(+234) 137632128 Coinbase@yahoo.com Address goes here</p>
+          </section>
+          <span class="child_contact">Download Our App</span>
+        </section>
+        <section class="coinbaseInstagram">
+          <section class="containerContext">
+            <h5>CoinBase Instagram</h5>
+          </section>
+          <section class="containerCards">
+            <div class="cardGrid"></div>
+            <div class="cardGrid"></div>
+            <div class="cardGrid"></div>
+            <div class="cardGrid"></div>
+            <div class="cardGrid"></div>
+            <div class="cardGrid"></div>
+            <div class="cardGrid"></div>
+            <div class="cardGrid"></div>
+          </section>
+        </section>
+      </section>
+    </footer>
     <div id="app"></div>
   </body>
 </html>
