--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
       <section class="header">
         <nav>
           <figure class="containerLogo">
-            <img class="logo" src="" alt="Image logo" />
+            <img
+              class="logo"
+              src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/logo/logo.png?raw=true"
+              alt="Image logo"
+            />
           </figure>
           <ul class="navList">
             <li class="navItemList"><a href="#">Home</a></li>
@@ -24,7 +28,7 @@
               <option value="">Sell Bitcoin</option>
               <option value="">Sell Gift card</option>
             </select>
-            <div class="btnLogin"><a href="#">LOGIN</a></div>
+            <button class="btnLogin">LOGIN</button>
           </section>
         </nav>
         <section class="hero">
@@ -40,8 +44,20 @@
             <div class="btn"><a href="#">GET STARTED</a></div>
           </section>
           <figure>
-            <img src="@assetImgs/img/headerImgFirst" alt="Image the a device" />
+            <img
+              src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/img/headerImgFirst.png?raw=true"
+              alt="Image the a device"
+            />
           </figure>
+          <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path
+                fill="#ffffff"
+                fill-opacity="1"
+                d="M0,192L48,202.7C96,213,192,235,288,208C384,181,480,107,576,80C672,53,768,75,864,106.7C960,139,1056,181,1152,181.3C1248,181,1344,139,1392,117.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+              ></path>
+            </svg>
+          </div>
         </section>
       </section>
     </header>
@@ -50,7 +66,7 @@
         <section class="welcomeCoinBase">
           <figure>
             <img
-              src="../src/assets/imgs/img/mainImgFirst1.png"
+              src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/img/mainImgFirst1.png?raw=true"
               alt="image the two people"
             />
           </figure>
@@ -70,7 +86,6 @@
             </div>
           </section>
         </section>
-
         <section class="rates">
           <section class="rateInfo">
             <section class="containerContext">
@@ -82,7 +97,10 @@
               <section class="coin">
                 <section class="coinBitcoin">
                   <figure>
-                    <img src="" alt="Icon the a Bitcoin" />
+                    <img
+                      src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/icon/iconBitcoin.png?raw=true"
+                      alt="Icon the a Bitcoin"
+                    />
                   </figure>
                   <span>BTC</span>
                 </section>
@@ -94,7 +112,10 @@
               <section class="coin">
                 <section class="coinEth">
                   <figure>
-                    <img src="" alt="Icon the a Ethereum" />
+                    <img
+                      src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/icon/Eth.png?raw=true"
+                      alt="Icon the a Ethereum"
+                    />
                   </figure>
                   <span>ETH</span>
                 </section>
@@ -104,26 +125,29 @@
                 </section>
               </section>
             </section>
-
             <section class="ourReserves">
               <section class="reserveContainer reserveContainerBank">
-                <section class="currencyProvider">
+                <section class="currencyProvider currencyProviderBank">
                   <figure>
-                    <img src="" alt="Image to the Bank provider" />
+                    <img
+                      src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/icon/bank-building.png?raw=true"
+                      alt="Image to the Bank provider"
+                    />
                   </figure>
                   <span>Bank Transfer</span>
                 </section>
-
                 <section class="payment">
                   <span><b> #3452030300303.24/$ </b></span>
                   <span>NGN</span>
                 </section>
               </section>
-
               <section class="reserveContainer reserveContainerBitcoin">
-                <section class="currencyProvider">
+                <section class="currencyProvider currencyProviderBitcoin">
                   <figure>
-                    <img src="" alt="Image to the Bitcoin provider" />
+                    <img
+                      src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/icon/iconBitcoin.png?raw=true"
+                      alt="Image to the Bitcoin provider"
+                    />
                   </figure>
                   <span>Bitcoin</span>
                 </section>
@@ -133,15 +157,16 @@
                   <span>NGN</span>
                 </section>
               </section>
-
               <section class="reserveContainer reserveContainerEth">
-                <section class="currencyProvider">
+                <section class="currencyProvider currencyProviderEth">
                   <figure>
-                    <img src="" alt="Image to the Ethereum provider" />
+                    <img
+                      src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/icon/Eth.png?raw=true"
+                      alt="Image to the Ethereum provider"
+                    />
                   </figure>
                   <span>Ethereum</span>
                 </section>
-
                 <section class="payment">
                   <span><b> 1000.00 ETH </b></span>
                   <span>NGN</span>
@@ -152,26 +177,47 @@
             <section class="latestExchanges">
               <section class="conversionProvider conversion">
                 <span>Bitcoin BTC</span>
-                <span>--></span>
+                <span>-</span>
                 <span>Bank Transfer NGN</span>
               </section>
               <section class="currencyConversion conversion">
                 <span><b>1.16</b> BTC</span>
-                <span><----></span>
+                <span>-</span>
                 <span><b>696152299929.23</b> NGN</span>
               </section>
               <section class="couponConversion conversion">
                 <span>Amazon Card</span>
-                <span>--></span>
+                <span>-</span>
                 <span>Bank Transfer NGN</span>
               </section>
             </section>
           </section>
+          <div class="waveTop">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path
+                fill="#ffffff"
+                fill-opacity="1"
+                d="M0,320L40,304C80,288,160,256,240,245.3C320,235,400,245,480,218.7C560,192,640,128,720,122.7C800,117,880,171,960,186.7C1040,203,1120,181,1200,170.7C1280,160,1360,160,1400,160L1440,160L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"
+              ></path>
+            </svg>
+          </div>
+          <div class="waveBottom">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path
+                fill="#ffffff"
+                fill-opacity="1"
+                d="M0,160L40,149.3C80,139,160,117,240,101.3C320,85,400,75,480,106.7C560,139,640,213,720,208C800,203,880,117,960,106.7C1040,96,1120,160,1200,165.3C1280,171,1360,117,1400,90.7L1440,64L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
+              ></path>
+            </svg>
+          </div>
         </section>
 
         <section class="greatExperience">
           <figure>
-            <img src="" alt="Image the one person creating content" />
+            <img
+              src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/img/mainImgSecond2.png?raw=true"
+              alt="Image the one person creating content"
+            />
           </figure>
           <section class="containerContext">
             <h3>Great experience with CoinBase</h3>
@@ -188,24 +234,40 @@
         </section>
 
         <section class="tradeAnywhere">
-          <section class="containerContext">
-            <h4>Trade from anywhere</h4>
-            <section class="cards">
-              ;
-              <div class="card cardBitcoin">
-                <figure>
-                  <img src="" alt="Image the a Bitcoin" />
-                </figure>
-                <span>Bitcoin</span>
-              </div>
-              <div class="card cardGif">
-                <figure>
-                  <img src="" alt="Image the a gift card" />
-                </figure>
-                <span>Gift Cards</span>
-              </div>
+          <section class="tradeAnywhereInfo">
+            <section class="containerContext">
+              <h4>Trade from anywhere</h4>
+              <section class="cards">
+                <div class="card cardBitcoin">
+                  <figure>
+                    <img
+                      src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/icon/iconBitcoin.png?raw=true"
+                      alt="Image the a Bitcoin"
+                    />
+                  </figure>
+                  <span>Bitcoin</span>
+                </div>
+                <div class="card cardGif">
+                  <figure>
+                    <img
+                      src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/icon/iconGiftCards.png?raw=true"
+                      alt="Image the a gift card"
+                    />
+                  </figure>
+                  <span>Gift Cards</span>
+                </div>
+              </section>
             </section>
           </section>
+          <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path
+                fill="#ffffff"
+                fill-opacity="1"
+                d="M0,96L80,122.7C160,149,320,203,480,208C640,213,800,171,960,149.3C1120,128,1280,128,1360,128L1440,128L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+              ></path>
+            </svg>
+          </div>
         </section>
 
         <section class="ourBlog">
@@ -280,6 +342,12 @@
               >Good deal and very wonderful service thank you.</span
             >
           </section>
+          <figure class="bubbles">
+            <img
+              src="https://raw.githubusercontent.com/Angel-Landkoer/The-pictures/master/coinBaseImg/imgFonts/happyCustomers.png"
+              alt="Image the floating bubbles"
+            />
+          </figure>
         </section>
         <section class="downloadApp">
           <section class="containerContext">
@@ -289,21 +357,42 @@
             </p>
           </section>
           <section class="storeImg">
-            <figure>
-              <img src="" alt="store images, App store" />
+            <figure class="appStore">
+              <img
+                src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/icon/mainIconSecond1.png?raw=true"
+                alt="store images, App store"
+              />
             </figure>
-            <figure>
-              <img src="" alt="store images, Play store" />
+            <figure class="playStore">
+              <img
+                src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/icon/mainIconfirst1.png?raw=true"
+                alt="store images, Play store"
+              />
             </figure>
           </section>
           <section class="devicesPhone">
             <figure>
-              <img src="" alt="Images Phones" />
+              <img
+                src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/img/mianImgThird3.png?raw=true"
+                alt="Images Phones"
+              />
             </figure>
             <figure>
-              <img src="" alt="Images Phones" />
+              <img
+                src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/img/mainImgThird3_2.png?raw=true"
+                alt="Images Phones"
+              />
             </figure>
           </section>
+          <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path
+                fill="#ffffff"
+                fill-opacity="1"
+                d="M0,256L34.3,240C68.6,224,137,192,206,192C274.3,192,343,224,411,213.3C480,203,549,149,617,112C685.7,75,754,53,823,85.3C891.4,117,960,203,1029,250.7C1097.1,299,1166,309,1234,298.7C1302.9,288,1371,256,1406,240L1440,224L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
+              ></path>
+            </svg>
+          </div>
         </section>
         <section class="mainEnd">
           <section class="containerContext">
@@ -334,17 +423,20 @@
         <section class="descriptionContent">
           <section class="description">
             <figure>
-              <img src="" alt="Logo in the website" />
+              <img
+                src="https://github.com/Angel-Landkoer/The-pictures/blob/master/coinBaseImg/logo/footerLogo.png?raw=true"
+                alt="Logo in the website"
+              />
             </figure>
             <p>
               Fusce ut elit aliquet, fermentum leo vel, tempus nunc. Fusce eu
               rhoncus augue. Fusce vel metus pharetra, fermentum
             </p>
             <section class="contentIcons">
-              <span>Icon</span>
-              <span>Icon</span>
-              <span>Icon</span>
-              <span>Icon</span>
+              <i class="fab fa-google-plus-g"></i>
+              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-instagram-square"></i>
             </section>
           </section>
           <span class="child_description">© 2019 Designed by Cr8tiv_yemmy</span>
@@ -385,5 +477,9 @@
       </section>
     </footer>
     <div id="app"></div>
+    <script
+      src="https://kit.fontawesome.com/e0213a951d.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
