Añadiendo contenedor de modal

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <body>
     <header>
       <section class="header">
+        <div class="modalHide"></div>
         <nav>
           <figure class="containerLogo">
             <img
@@ -476,7 +477,6 @@
         </section>
       </section>
     </footer>
-    <div id="app"></div>
     <script
       src="https://kit.fontawesome.com/e0213a951d.js"
       crossorigin="anonymous"
